fix(#231): align app icons

--- a/src/page/Plo/Channels/styles.module.scss
+++ b/src/page/Plo/Channels/styles.module.scss
@@ -63,6 +63,11 @@
       display: flex;
       flex-direction: column;
       gap: 30px;
+
+      @media screen and (max-width: 768px) {
+        flex-direction: initial;
+        flex: 1;
+      }
     }
 
     .channels-unique {
@@ -81,6 +86,11 @@
       gap: 10px;
       color: #555555;
       align-items: center;
+
+      @media screen and (max-width: 768px) {
+        flex-direction: initial;
+        flex: 1;
+      }
     }
 
     .icons-container-unique {
